--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["aurometal", "Fraunces", "saurus", "strikethrough"]
+  "cSpell.words": ["aurometal", "Fraunces", "Parfum", "saurus", "strikethrough"]
 }
