--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["aurometal", "Fraunces", "Parfum", "saurus", "strikethrough"]
+  "cSpell.words": [
+    "aurometal",
+    "Fraunces",
+    "Parfum",
+    "saurus",
+    "strikethrough"
+  ],
+  "liveServer.settings.port": 5501
 }
